Bug 389938 - Crash on exit after rendering an animation
Summary: Crash on exit after rendering an animation
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (show other bugs)
Version: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2018-02-06 09:04 UTC by Halla Rempt
Modified: 2018-02-26 16:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Halla Rempt 2018-02-06 09:04:11 UTC
To reproduce:

* Create a new document
* Create a bunch of frames
* Render the animation
* Close Krita, discard the document

Thread 1 (Thread 0x7f02d8310940 (LWP 3962)):
[KCrash Handler]
#6  0x0000000000000030 in ?? ()
#7  0x00007f02d7ab0db8 in KisOpenGLImageTextures::destroyImageTextureTiles (this=0xa514ce0) at /home/boud/dev/krita/libs/ui/opengl/kis_opengl_image_textures.cpp:250
#8  0x00007f02d7ab4e36 in KisOpenGLImageTextures::~KisOpenGLImageTextures (this=0xa514ce0, __in_chrg=<optimized out>) at /home/boud/dev/krita/libs/ui/opengl/kis_opengl_image_textures.cpp:134
#9  0x00007f02d7ab5099 in KisOpenGLImageTextures::~KisOpenGLImageTextures (this=0xa514ce0, __in_chrg=<optimized out>) at /home/boud/dev/krita/libs/ui/opengl/kis_opengl_image_textures.cpp:136
#10 0x00007f02d7c9560a in KisSharedPtr<KisOpenGLImageTextures>::deref (sp=<optimized out>, t=<optimized out>) at /home/boud/dev/krita/libs/global/kis_shared_ptr.h:214
#11 KisSharedPtr<KisOpenGLImageTextures>::deref (this=0xa514f80) at /home/boud/dev/krita/libs/global/kis_shared_ptr.h:221
#12 KisSharedPtr<KisOpenGLImageTextures>::~KisSharedPtr (this=0xa514f80, __in_chrg=<optimized out>) at /home/boud/dev/krita/libs/global/kis_shared_ptr.h:109
#13 KisAnimationFrameCache::Private::~Private (this=0xa514f80, __in_chrg=<optimized out>) at /home/boud/dev/krita/libs/ui/kis_animation_frame_cache.cpp:43
#14 QScopedPointerDeleter<KisAnimationFrameCache::Private>::cleanup (pointer=0xa514f80) at /usr/include/qt5/QtCore/qscopedpointer.h:60
#15 QScopedPointer<KisAnimationFrameCache::Private, QScopedPointerDeleter<KisAnimationFrameCache::Private> >::~QScopedPointer (this=0xa514f20, __in_chrg=<optimized out>) at /usr/include/qt5/QtCore/qscopedpointer.h:107
#16 KisAnimationFrameCache::~KisAnimationFrameCache (this=0xa514f00, __in_chrg=<optimized out>) at /home/boud/dev/krita/libs/ui/kis_animation_frame_cache.cpp:179
#17 0x00007f02d7c95699 in KisAnimationFrameCache::~KisAnimationFrameCache (this=0xa514f00, __in_chrg=<optimized out>) at /home/boud/dev/krita/libs/ui/kis_animation_frame_cache.cpp:182
#18 0x00007f02d7c98dbe in KisSharedPtr<KisAnimationFrameCache>::deref (sp=<optimized out>, t=<optimized out>) at /home/boud/dev/krita/libs/global/kis_shared_ptr.h:214
#19 KisSharedPtr<KisAnimationFrameCache>::deref (this=0x83e3ad0) at /home/boud/dev/krita/libs/global/kis_shared_ptr.h:221
#20 KisSharedPtr<KisAnimationFrameCache>::~KisSharedPtr (this=0x83e3ad0, __in_chrg=<optimized out>) at /home/boud/dev/krita/libs/global/kis_shared_ptr.h:109
#21 KisAsyncAnimationCacheRenderer::Private::~Private (this=0x83e3ad0, __in_chrg=<optimized out>) at /home/boud/dev/krita/libs/ui/KisAsyncAnimationCacheRenderer.cpp:24
#22 QScopedPointerDeleter<KisAsyncAnimationCacheRenderer::Private>::cleanup (pointer=0x83e3ad0) at /usr/include/qt5/QtCore/qscopedpointer.h:60
#23 QScopedPointer<KisAsyncAnimationCacheRenderer::Private, QScopedPointerDeleter<KisAsyncAnimationCacheRenderer::Private> >::~QScopedPointer (this=0x8571698, __in_chrg=<optimized out>) at /usr/include/qt5/QtCore/qscopedpointer.h:107
#24 KisAsyncAnimationCacheRenderer::~KisAsyncAnimationCacheRenderer (this=0x8571680, __in_chrg=<optimized out>) at /home/boud/dev/krita/libs/ui/KisAsyncAnimationCacheRenderer.cpp:37
#25 0x00007f02d7c9693f in KisAnimationCachePopulator::Private::~Private (this=0x8571610, __in_chrg=<optimized out>) at /home/boud/dev/krita/libs/ui/kis_animation_cache_populator.cpp:47
#26 QScopedPointerDeleter<KisAnimationCachePopulator::Private>::cleanup (pointer=0x8571610) at /usr/include/qt5/QtCore/qscopedpointer.h:60
#27 QScopedPointer<KisAnimationCachePopulator::Private, QScopedPointerDeleter<KisAnimationCachePopulator::Private> >::~QScopedPointer (this=0x86333e8, __in_chrg=<optimized out>) at /usr/include/qt5/QtCore/qscopedpointer.h:107
#28 KisAnimationCachePopulator::~KisAnimationCachePopulator (this=0x86333d8, __in_chrg=<optimized out>) at /home/boud/dev/krita/libs/ui/kis_animation_cache_populator.cpp:277
#29 0x00007f02d7c3e765 in KisPart::Private::~Private (this=0x8633390, __in_chrg=<optimized out>) at /home/boud/dev/krita/libs/ui/KisPart.cpp:96
#30 KisPart::~KisPart (this=0x7f02d81615a0 <_ZZN12_GLOBAL__N_116Q_QGS_s_instance13innerFunctionEvE6holder>, __in_chrg=<optimized out>) at /home/boud/dev/krita/libs/ui/KisPart.cpp:155
#31 0x00007f02d7c3e7e9 in (anonymous namespace)::Q_QGS_s_instance::Holder::~Holder (this=<optimized out>, __in_chrg=<optimized out>) at /home/boud/dev/krita/libs/ui/KisPart.cpp:82
#32 0x00007f02ccb13129 in __run_exit_handlers () from /lib64/libc.so.6
#33 0x00007f02ccb13175 in exit () from /lib64/libc.so.6
#34 0x00007f02ccafc6dc in __libc_start_main () from /lib64/libc.so.6
#35 0x00000000004068a9 in _start () at ../sysdeps/x86_64/start.S:118
Comment 1 Dmitry Kazakov 2018-02-26 16:51:14 UTC
Git commit 0464f524649bff23dc08f4dd47d8b23fc94346b6 by Dmitry Kazakov.
Committed on 26/02/2018 at 16:50.
Pushed by dkazakov into branch 'master'.

Fix leak of the animation cache through a shared pointer in KisAsyncAnimationCacheRenderer

M  +8    -0    libs/ui/KisAsyncAnimationCacheRenderer.cpp
M  +2    -0    libs/ui/KisAsyncAnimationCacheRenderer.h
M  +15   -13   libs/ui/KisAsyncAnimationRendererBase.cpp
M  +9    -0    libs/ui/KisAsyncAnimationRendererBase.h

https://commits.kde.org/krita/0464f524649bff23dc08f4dd47d8b23fc94346b6