Fix leak of the animation cache through a shared pointer in KisAsyncAnimationCacheRenderer

BUG:389938